--- a/Final_Portfolio_Machine__Learning.ipynb
+++ b/Final_Portfolio_Machine__Learning.ipynb
@@ -285,14 +285,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Jacvecuno5-r",
         "outputId": "6c81601a-903a-4a57-bdc6-7802f5cb38af"
       },
       "id": "Jacvecuno5-r",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,17 +661,16 @@
         "id": "aZ9RDfGHmRrU"
       },
       "id": "aZ9RDfGHmRrU",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "BiHUIfdhUyXR",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "BiHUIfdhUyXR",
         "outputId": "55289678-5437-4401-8e0c-a8af021821d5"
@@ -718,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "dMzYfP_rm9aK",
       "metadata": {
         "id": "dMzYfP_rm9aK"
@@ -762,12 +760,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "1uSZIX9J8nUo",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1uSZIX9J8nUo",
         "outputId": "4a84ab0b-c295-49de-cce7-fb7e0c8dc8aa"
@@ -811,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "9a5CgA0bpbxm",
       "metadata": {
         "id": "9a5CgA0bpbxm"
@@ -845,7 +842,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "pOF6-dnUpbvT",
       "metadata": {
         "id": "pOF6-dnUpbvT"
@@ -868,13 +865,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "B13TppdVpbtb",
       "metadata": {
         "id": "B13TppdVpbtb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "15752775-1d61-4455-87e2-05c3a8b3d4b9"
       },
@@ -1207,7 +1203,7 @@
         "outputId": "3166e2a7-98d7-4487-9b85-db6b5763eb07"
       },
       "id": "43Qg5N9TrIYH",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1315,7 +1311,7 @@
         "id": "PSgosFx9Nsz0"
       },
       "id": "PSgosFx9Nsz0",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1329,14 +1325,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "NUC8aRIJ4tay",
         "outputId": "ff8675c9-2117-4401-d77b-68320c86541a"
       },
       "id": "NUC8aRIJ4tay",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1389,7 +1384,7 @@
         "id": "8pgukAGk12zi"
       },
       "id": "8pgukAGk12zi",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1423,13 +1418,12 @@
       "metadata": {
         "id": "B-De6eg012uv",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "473e7a65-f4cf-4c62-9ee8-6c3f8e83d08f"
       },
       "id": "B-De6eg012uv",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1484,13 +1478,12 @@
       "metadata": {
         "id": "usQ_mwKf12sW",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "678ca675-5a8b-42dd-84c8-706a3f6dac6e"
       },
       "id": "usQ_mwKf12sW",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1525,14 +1518,13 @@
         "        .withColumn(\"mean_encoded\", when(col(\"mean_encoded\").isNull(), global_mean).otherwise(col(\"mean_encoded\")))\n",
         "\n",
         "    # Return as Spark DataFrames\n",
-        "    return train_encoded, test_encoded\n",
-        ""
+        "    return train_encoded, test_encoded\n"
       ],
       "metadata": {
         "id": "D0RLUfCC12p8"
       },
       "id": "D0RLUfCC12p8",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1601,13 +1593,12 @@
       "metadata": {
         "id": "ib7H8XBt12nc",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "43e8ddbb-3f04-49cf-d5c1-fe623f0d1cc0"
       },
       "id": "ib7H8XBt12nc",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1783,7 +1774,7 @@
         "id": "5xbAFt3A12k1"
       },
       "id": "5xbAFt3A12k1",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1866,14 +1857,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "DG4E_0cf-cS7",
         "outputId": "f2934c36-94f0-4687-c871-5392fe2f1956"
       },
       "id": "DG4E_0cf-cS7",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1924,13 +1914,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "NJtIQ0HVm9Id",
       "metadata": {
         "id": "NJtIQ0HVm9Id",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "4de29bd6-2c6d-4fb8-d6d7-6dbb9ab81a04"
       },
@@ -2044,7 +2033,7 @@
         "outputId": "75971fc3-8273-4111-b822-9084c9c1a0f7"
       },
       "id": "wHv6CzD8l--i",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2488,7 +2477,7 @@
         "id": "bGBOAVgwaCfY"
       },
       "id": "bGBOAVgwaCfY",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2502,14 +2491,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "NxAzgnRhl-6z",
         "outputId": "c4d5e323-1549-4475-d37c-3dcfa0f4b24e"
       },
       "id": "NxAzgnRhl-6z",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2572,7 +2560,7 @@
         "id": "ORPN6eF3l-1h"
       },
       "id": "ORPN6eF3l-1h",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2609,14 +2597,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "3RULNCGSaE7C",
         "outputId": "b8e64615-d1a6-4059-e2a3-7f714e468835"
       },
       "id": "3RULNCGSaE7C",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2691,14 +2678,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "eFZf9Zj7aHej",
         "outputId": "ce39b0ee-8e83-4bff-df27-719195f0cf2d"
       },
       "id": "eFZf9Zj7aHej",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2753,14 +2739,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "KskmZh1iaKED",
         "outputId": "d17a0853-49d7-4dcf-9b0a-eac106e53f48"
       },
       "id": "KskmZh1iaKED",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2787,14 +2772,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "cu8-DtP9aMkx",
         "outputId": "425b2067-55d3-477e-cca7-97fde53b8995"
       },
       "id": "cu8-DtP9aMkx",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3047,7 +3031,7 @@
         "outputId": "ee734ed0-dc92-4c23-c254-3296c26ee49d"
       },
       "id": "BFyxWn4taOhI",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3376,7 +3360,7 @@
         "outputId": "66abafb1-6d5b-49b5-c883-c6cf7e7ea23b"
       },
       "id": "TQEGpZLYL3OU",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3821,7 +3805,7 @@
         "id": "5s2AYINrLhPk"
       },
       "id": "5s2AYINrLhPk",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3835,14 +3819,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ii-fEv25L-qx",
         "outputId": "248626fd-3a56-424c-9f7d-c9a75428878b"
       },
       "id": "ii-fEv25L-qx",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3901,7 +3884,7 @@
         "id": "USEOZhleL-oH"
       },
       "id": "USEOZhleL-oH",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3937,14 +3920,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IqP-ALIaL-lp",
         "outputId": "0b7e0fb7-3373-4d99-d246-ed272a8a1914"
       },
       "id": "IqP-ALIaL-lp",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4018,14 +4000,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "gUG6S0TKL-i_",
         "outputId": "155c55f7-e38b-4994-de9c-821ecd6aff3b"
       },
       "id": "gUG6S0TKL-i_",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4078,14 +4059,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "kQ_6FgNUL-gq",
         "outputId": "3417c6fa-14b6-4d0a-9b59-756a7de7e0e0"
       },
       "id": "kQ_6FgNUL-gq",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4147,14 +4127,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1EfXi0PKL-cz",
         "outputId": "db5385a1-2a6f-4308-e816-dbe6a6aac3f2"
       },
       "id": "1EfXi0PKL-cz",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4181,14 +4160,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "i3kD1lH4L-aR",
         "outputId": "038a2897-8773-4b04-df6e-dc7af512b157"
       },
       "id": "i3kD1lH4L-aR",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4479,7 +4457,7 @@
         "outputId": "051a7c72-d08c-432e-bec6-68de677ef9b0"
       },
       "id": "ZJyBMjrCL-Xm",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4904,14 +4882,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Lh3osEYYL-Uc",
         "outputId": "4ec0d53c-0e06-4c19-fb34-480fb62b0952"
       },
       "id": "Lh3osEYYL-Uc",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4998,7 +4975,7 @@
         "outputId": "b71b903a-da82-4004-96f6-499e48cc476a"
       },
       "id": "6RoJs72zVQzC",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5020,11 +4997,10 @@
         "7d98806a-e3f7-4007-a440-42144d4be937"
       ],
       "provenance": [],
-      "toc_visible": true
+      "gpuType": "T4"
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -7778,7 +7754,8 @@
           }
         }
       }
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
